# runpod-serverless-rust-demo

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build-image.yml
src/: main.rs
