[package]
name = "runpod-serverless-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
runpod-sdk = { version = "0.2", features = ["serverless"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
